maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:2: error: illegal start of statement
override def run() {var x:Int=0; while (!isOverBaggle) {v=random3(); match 
                                                                     ^RandomMouseMaze:4: error: '}' expected but 'case' found.
 case 1=>right(); if (!isFacingWall) {forward()}
 ^RandomMouseMaze:5: error: '}' expected but 'case' found.
 case 2=>left(); if (!isFacingWall) {forward()}}
 ^RandomMouseMaze:7: error: eof expected but '}' found.
} 
^